add vertical bar

--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -1,14 +1,14 @@
-<!-- 
+
 <ngx-charts-bar-vertical
   [view]="view"
-  [results]="single"
+  [results]="dataBar"
   [gradient]="gradient"
   [xAxis]="showXAxis"
   [yAxis]="showYAxis"
-  [legend]="showLegend"
+  [legend]="false"
   [showXAxisLabel]="showXAxisLabel"
   [showYAxisLabel]="showYAxisLabel"
   [xAxisLabel]="xAxisLabel"
   [yAxisLabel]="yAxisLabel"
   (select)="onSelect($event)">
-</ngx-charts-bar-vertical> -->
+</ngx-charts-bar-vertical>
