--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
+<div class="content">
 <app-pie-chart></app-pie-chart>
 <app-chart></app-chart>
 </div>
