--- a/src/app/pie-chart/pie-chart.component.scss
+++ b/src/app/pie-chart/pie-chart.component.scss
@@ -1,9 +1,3 @@
-// .container {
-//     width: 80%;
-//     height: 400px;
-//     border: 1px silid blue;
-//   //  box-shadow: -10px 30px 20px #777;
-// }
-// .chart-legend {
-//     margin-top: 50px;
-// }
+.container {
+margin-top: 50px;
+}
