add tree vertical barChart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<h1>NGX-CHARTS</h1>
 <div class="content">
 <app-pie-chart></app-pie-chart>
+<div class="chart-bar">
 <app-chart></app-chart>
+</div>
 </div>
 
 <router-outlet></router-outlet>
