--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -2,7 +2,7 @@
 <ngx-charts-bar-vertical
   [view]="view"
   [results]="dataBar"
-  [gradient]="true"
+  [gradient]="false"
   [xAxis]="true"
   [yAxis]="true"
   [legend]="false"
@@ -30,7 +30,7 @@
 </ngx-charts-bar-vertical>
 
 <ngx-charts-bar-vertical
-  [view]="[1200]"
+  [view]="[1000]"
   [results]="dataBarCountry"
   [gradient]="false"
   [xAxis]="true"
