--- a/src/app/chart/chart.component.scss
+++ b/src/app/chart/chart.component.scss
@@ -4,3 +4,8 @@
     justify-content: space-around;
     flex-wrap: wrap;
 }
+::ng-deep .ngx-charts { 
+    text{
+        fill: #d2d2d2!important; 
+    }
+}
